tests/tests/snapshots/host_syntax_identity__identity_stmt__sim-vertical-slice__PlaceOrder.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(transaction
    (db-insert! Orders order)
    (discard order)
)
(return order)
