tests/tests/snapshots/host_syntax_identity__identity_stmt__sim-vertical-slice__RecordAudit.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(db-insert! AuditEntries (record-cons AuditEntry (id (uuid-new)) (note "order placed")))
(discard (record-cons AuditEntry (id (uuid-new)) (note "order placed")))
(return order)
